--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.9600: Sun Apr 26 17:56:40 EDT 2009
+   - started adding candlesticks
+   - added the pod and the pod-example test script
+   - got candlesticks working -- seems to work fine in mixed mode too
+
+0.9402: Wed Apr 15 22:05:18 EDT 2009
+   - misnamed in the name line of the pod.  Wow.
+
 0.9401: Wed Apr 15 07:29:37 EDT 2009
    - this seems more or less ready to distribute
 
