--- a/candlesticks.pod
+++ b/candlesticks.pod
@@ -32,6 +32,9 @@ bar-graphs would, so this seemed to require a new option.
 
 This example turns out like this: L<https://voltar.org/PerlModules/candlesticks_example.png>.
 
+NOTE: You do can to use L<GD::Graph::mixed> here.  See L<GD::Graph::ohlc> for an
+example that uses mixed.
+
     use strict;
     use warnings;
     use List::Util qw(min max);
@@ -70,7 +73,7 @@ This example turns out like this: L<https://voltar.org/PerlModules/candlesticks_
         ["2008/01/31", "31.9100", "32.7400", "31.7200", "32.6000"],
     );
 
-    my @all_points = map {@$_[1 .. 4]} @msft[1 .. $#msft];
+    my @all_points = map {@$_[1 .. 4]} @msft;
     my $min_point  = min(@all_points);
     my $max_point  = max(@all_points);
 
