--- a/ohlc.pod
+++ b/ohlc.pod
@@ -25,6 +25,9 @@ nicely into an ohlc-mixed graph:
 
 This example turns out like this: L<https://voltar.org/PerlModules/ohlc_example.png>.
 
+NOTE: You do not need to use L<GD::Graph::mixed> here.  See
+L<GD::Graph::candlesticks> for an example that doesn't use mixed.
+
     use strict;
     use warnings;
     use List::Util qw(min max);
@@ -64,7 +67,7 @@ This example turns out like this: L<https://voltar.org/PerlModules/ohlc_example.
         ["2008/01/31", "31.9100", "32.7400", "31.7200", "32.6000"],
     );
 
-    my @all_points = map {@$_[1 .. 4]} @msft[1 .. $#msft];
+    my @all_points = map {@$_[1 .. 4]} @msft;
     my $min_point  = min(@all_points);
     my $max_point  = max(@all_points);
 
