--- a/candlesticks.pod
+++ b/candlesticks.pod
@@ -113,6 +113,16 @@ all.  Half the fun of releasing this stuff is knowing that people use it.
 If you see anything wrong with the callbacks, the docs, or anything:  Definitely
 let me know!  rt.cpan, irc, email, whatever.  Just let me know.
 
+=head1 THANKS
+
+Nilson Santos Figueiredo Junior C<< <nilsonsfj@cpan.org> >>
+
+=over
+
+Noticed the candlesticks were upside down -- how did I miss that?
+
+=back
+
 =head1 COPYRIGHT
 
 Copyright (c) 2009 Paul Miller
