--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9606: Mon Oct 10 2011
+   - contribs for candlestick overwrite mode, thanks Andrew
+
 0.9602: Fri Oct 09 2009
    - candlesticks were upside down -- how did I not notice that?
      Thanks Nilson.
