--- a/ohlc.pod
+++ b/ohlc.pod
@@ -93,7 +93,7 @@ L<GD::Graph::candlesticks> for an example that doesn't use mixed.
     ];
 
     my $gd = $graph->plot($data_ohlc) or die $graph->error;
-    open my $dump, ">ohlc_example.png" or die $!;
+    open my $dump, ">", "/tmp/ohlc_example.png" or die $!;
     print $dump $gd->png;
     close $dump;
 
@@ -110,7 +110,7 @@ let me know!  rt.cpan, irc, email, whatever.  Just let me know.
 
 =head1 COPYRIGHT
 
-Copyright (c) 2009 Paul Miller
+Copyright (c) 2012 Paul Miller
 
 =head1 SEE ALSO
 
